# LLM-Callcenter-Agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: dialogue.py  health.py  metrics.py  router.py
app/core/: client.py  manager.py  metrics.py  optimizer.py  prompts.py
app/models/: dialogue.py  enums.py  metrics_response.py  requests.py
app/services/: classification_service.py  dialogue_service.py
app/storage/: memory.py
app/utils/: exceptions.py  logger.py
